<resources>
    <string name="app_name">一起装修</string>
    <string name="main">首页</string>
    <string name="owner">业主说</string>
    <string name="msg">消息</string>
    <string name="mine">我的</string>
    <string name="zhuangxiu">装修公司</string>
    <string name="tongcheng">同城活动</string>
    <string name="xueyuan">装修学院</string>
    <string name="yusuan">装修预算</string>
    <string name="jiancai">建材家居</string>
    <string name="xiaoguotu">效果图</string>
    <string name="zizhuxiadan">自助下单</string>
    <string name="sheji">设计/量房</string>
    <string name="decoration_company_title">装修公司</string>
    <string name="new_house">新房整装</string>
    <string name="old_house">老房整装</string>
    <string name="look_site">看现场</string>
    <string name="fitment_live">装修直播</string>
    <string name="site_playing">工地直播</string>
    <string name="yiqi_group">一起团队</string>
    <string name="artiletitle">装修学堂</string>
    <string name="subview_footer">点击加载更多</string>
    <string name="new_house_prise">677元/㎡</string>
    <string name="old_house_prise">677+177元/㎡</string>
    <string name="no_more_datas">没有更多数据了</string>
    <string name="fitment_progress">装修进度</string>
    <string name="follow">加关注</string>
    <string name="case_number">装修案例：(%1$d)</string>
    <string name="is_playing">进行中</string>
    <string name="finish">已完成</string>
    <string name="no_accomplish">未完成</string>
    <string name="no_more_content">没有更多内容了</string>
    <string name="name_fragment_fitment_live">%1$s（%2$s）</string>
    <string name="comments_fragment_fitment_live">评论（%1$s）</string>
    <string name="no_fitment_content">暂无工地内容</string>
    <string name="hot_apply">火热报名中...</string>
    <string name="endTime">报名截止日期：2016年12月03日</string>
    <string name="event_end">活动已结束...</string>
    <string name="search_textview">搜索用户/帖子</string>
    <string name="citis">成都</string>
    <string name="cancle">取消</string>
    <string name="search_textview_content">搜索更多内容</string>
    <string name="user">用户</string>
    <string name="tiezi">帖子</string>
    <string name="text_03">暂无搜索内容</string>
    <string name="text_01">相关文章</string>
    <string name="link">精选自北京装修论坛</string>
    <string name="all">全部</string>
    <string name="fit_before">装修前</string>
    <string name="fitint">装修中</string>
    <string name="fit_after">装修后</string>
    <string name="allfitment">全部装修流程</string>
    <array name="fitment_list">
        <item>验房收房</item>
        <item>装修公司</item>
        <item>量房设计</item>
        <item>辅材选购</item>
        <item>主材选购</item>
        <item>家居选购</item>
        <item>装修合同</item>
        <item>主题拆迁</item>
        <item>水电改造</item>
        <item>防水处理</item>
        <item>土木工程</item>
        <item>瓦工工程</item>
        <item>油工工程</item>
        <item>主材安装</item>
        <item>竣工验收</item>
        <item>软装配饰</item>
        <item>居家生活</item>
    </array>
    <array name="room">
        <item>全部</item>
        <item>客厅</item>
        <item>玄关</item>
        <item>起居室</item>
        <item>厨房</item>
        <item>餐厅</item>
        <item>衣帽间</item>
        <item>庭院</item>
        <item>卫生间</item>
        <item>阳台</item>
        <item>儿童房</item>
        <item>露台</item>
        <item>卧室</item>
        <item>书房</item>
        <item>娱乐室</item>
    </array>
    <array name="style">
        <item>全部</item>
        <item>现代</item>
        <item>简欧</item>
        <item>简约</item>
        <item>欧式</item>
        <item>田园</item>
        <item>中式</item>
        <item>欧式古典</item>
        <item>北欧</item>
        <item>小资</item>
        <item>新中式</item>
        <item>混搭</item>
        <item>乡村</item>
        <item>美式</item>
        <item>宜家</item>
        <item>日式</item>
        <item>新古典</item>
        <item>地中海</item>
        <item>东南亚</item>
    </array>
    <array name="layout">
        <item>全部</item>
        <item>背景墙</item>
        <item>收纳</item>
        <item>照片墙</item>
        <item>墙面</item>
        <item>窗帘</item>
        <item>餐台</item>
        <item>储物区</item>
        <item>隔断</item>
        <item>飘窗</item>
        <item>楼梯</item>
        <item>门窗</item>
        <item>吧台</item>
        <item>工作区</item>
        <item>吊顶</item>
        <item>地面</item>
        <item>灯具</item>
        <item>过道</item>
        <item>地台</item>
        <item>壁炉</item>
    </array>
    <array name="color">
        <item>全部</item>
        <item>红色</item>
        <item>白色</item>
        <item>绿色</item>
        <item>黑色</item>
        <item>原木</item>
        <item>紫色</item>
        <item>粉色</item>
        <item>春色</item>
        <item>黄色</item>
        <item>蓝色</item>
    </array>
    <string name="guide_know_top">让我们花十分钟了解你</string>
    <string name="guide_know_bottom">以便发现您最需要的装修内容</string>
    <string name="choice_sex">选择性别：</string>
    <string name="choice_birthday">选择生日：</string>
    <string name="fitment_stage">装修阶段：</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="decorating">正在装修</string>
    <string name="plan_decorate">计划装修</string>
    <string name="have_dwell">已近入住</string>
    <string name="no_plan">暂无计划</string>
    <string name="this_year">今年</string>
    <string name="next_year">明年</string>
    <string name="next_next_year">后年</string>
    <string name="go_to_decorate">进入一起装修</string>
    <string name="client">点击登陆</string>
    <string name="integration_rule">积分规则</string>
    <string name="post">帖子</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="my_order_new">我的订单</string>
    <string name="my_collect_new">我的收藏</string>
    <string name="msg_zan_flag">我的喜欢</string>
    <string name="my_setting_new">设置</string>
    <string name="my_feedback_new">意见反馈</string>
    <string name="all_link">成都装修总论坛</string>
    <string name="fitment_shop">装修选购区</string>
    <string name="window_linearlayout1">发帖</string>
    <string name="window_linearlayout2">晒单</string>
    <string name="window_linearlayout3">日记</string>
    <string name="window_linearlayout4">投诉/表扬</string>
    <string name="ps_room">客厅</string>
    <string name="ps_style">风格</string>
    <string name="ps_layout">局部</string>
    <string name="ps_color">颜色</string>
    <string name="article">文章详情</string>
    <string name="note_like">赞(%1$d)</string>
</resources>

