<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_guide_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="?android:actionBarSize"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:text="@string/cancle"
        android:textColor="@color/main_switch_green"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/bg_color"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guide_know_top"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/guide_know_bottom"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/choice_sex"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroup_choice_sex"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableLeft="@drawable/selector_choice_sex"
                android:drawablePadding="10dp"
                android:text="@string/man" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:button="@null"
                android:drawableLeft="@drawable/selector_choice_sex"
                android:drawablePadding="10dp"
                android:text="@string/woman" />
        </RadioGroup>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/bg_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/choice_birthday"
            android:textSize="18sp" />

        <DatePicker
            android:id="@+id/datePicker_choice_birthday"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:calendarViewShown="false"></DatePicker>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/bg_color" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/fitment_stage"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroup_fitment_stage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableLeft="@drawable/selector_choice_sex"
                android:drawablePadding="10dp"
                android:text="@string/decorating"
                android:textColor="@color/color_fitment_stage" />

            <RadioButton
                android:id="@+id/radioButton_plan_decorate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableLeft="@drawable/selector_choice_sex"
                android:drawablePadding="10dp"
                android:text="@string/plan_decorate"
                android:textColor="@color/color_fitment_stage" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableLeft="@drawable/selector_choice_sex"
                android:drawablePadding="10dp"
                android:text="@string/have_dwell"
                android:textColor="@color/color_fitment_stage" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableLeft="@drawable/selector_choice_sex"
                android:drawablePadding="10dp"
                android:text="@string/no_plan"
                android:textColor="@color/color_fitment_stage" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_this_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/this_year" />

            <TextView
                android:id="@+id/textView_next_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/next_year" />

            <TextView
                android:id="@+id/textView_next_next_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/next_next_year" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_go_to_decorate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_switch_green_translucence"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/go_to_decorate"
        android:textColor="@color/white__translucence"
        android:textSize="20sp" />
</LinearLayout>