<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <CheckedTextView
            android:id="@+id/designps_room"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/color_subview_switch"
            android:text="@string/ps_room" />

        <CheckedTextView
            android:id="@+id/designps_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/color_subview_switch"
            android:text="@string/ps_style" />

        <CheckedTextView
            android:id="@+id/designps_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/color_subview_switch"
            android:gravity="center"
            android:text="@string/ps_layout" />

        <CheckedTextView
            android:id="@+id/designps_color"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/color_subview_switch"
            android:gravity="center"
            android:text="@string/ps_color" />
    </LinearLayout>
    <com.cjj.MaterialRefreshLayout
        android:id="@+id/ps_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/ps_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>
    </com.cjj.MaterialRefreshLayout>
</LinearLayout>