<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".gui.activity.MainActivity">

    <FrameLayout
        android:id="@+id/main_framelaout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <CheckedTextView
                android:id="@+id/main_ctv_home"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:drawableTop="@drawable/selector_subview_home"
                android:text="@string/main"
                android:textAlignment="center"
                android:textColor="@color/color_subview_switch"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <CheckedTextView
                android:id="@+id/main_ctv_owner"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/selector_subview_owner"
                android:text="@string/owner"
                android:textAlignment="center"
                android:textColor="@color/color_subview_switch"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp">

            <CheckedTextView
                android:id="@+id/main_ctv_msg"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/selector_subview_msg"
                android:text="@string/msg"
                android:textAlignment="center"
                android:textColor="@color/color_subview_switch"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <CheckedTextView
                android:id="@+id/main_ctv_mine"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/selector_subview_mine"
                android:text="@string/mine"
                android:textAlignment="center"
                android:textColor="@color/color_subview_switch"
                android:textSize="10sp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
